--- a/app/css/scss/_gallery-template-super-enhanced.scss
+++ b/app/css/scss/_gallery-template-super-enhanced.scss
@@ -36,10 +36,10 @@
     z-index: 99;
     @include transition(opacity 200ms ease-in-out);
     &.next {
-      right: 0;
+      right: 1px;
     }
     &.previous {
-      left: 0;
+      left: 1px;
       @include transform(rotate(180deg));
     }
     &[disabled] {
@@ -52,6 +52,10 @@
     border: none;
     margin-bottom: 0;
     padding-bottom: 0;
+    &.left-image .gallery-image,
+    &.right-image .gallery-image {
+      width: 40%;
+    }
     &.push-down-text .gallery-text {
       margin-top: 1.5rem;
     }
@@ -66,18 +70,28 @@
     }
   }
 
+  .gallery-panel-inner {
+    display: block;
+  }
+
   .gallery-marquee-image,
   .gallery-title,
   .gallery-url,
   .gallery-status,
   .gallery-description {
-    width: 47.5%;
+    width: 50%;
   }
 
   .gallery-title,
   .gallery-url,
+  .gallery-status,
   .gallery-description {
     float: left;
+  }
+
+  .gallery-marquee-image,
+  .gallery-description {
+    padding: 0 2.5%;
   }
 
   .gallery-marquee-image {
@@ -91,7 +105,6 @@
 
   .gallery-description {
     margin: 0;
-    padding: 0 2.5% 0 5%;
     > p {
       text-align: justify;
       font-size: 1.15rem;
@@ -105,5 +118,11 @@
       font-size: 1.15rem;
       line-height: 1.35;
     }
+  }
+
+  .left-image .gallery-image,
+  .right-image .gallery-image {
+    top: 0;
+    transform: translateY(0);
   }
 }
