--- a/app/css/scss/_notes.scss
+++ b/app/css/scss/_notes.scss
@@ -27,9 +27,9 @@
 
 9. I try not to target elements using tag selectors as much as possible
 
-10. Exceptions to that last rule will be preceded with an ID or class
+10. Exceptions to that last rule will be preceded with a descriptive ID or class
 
-11. Exceptions will be tags that are already pretty semantic (e.g. img, h1, p)
+11. Exceptions are tags that are pretty semantic (e.g. img, p, nav)
 
 12. I try not to add classes just for the sake of styling as much as possible
 
