--- a/app/css/scss/_gallery-template-enhanced.scss
+++ b/app/css/scss/_gallery-template-enhanced.scss
@@ -11,27 +11,36 @@
     margin: 0 auto;
     width: 80%;
   }
-  &.left-image .gallery-image,
-  &.left-image .gallery-text,
+  &.left-image .gallery-image {
+    left: 0;
+  }
+  &.left-image .gallery-text {
+    float: right;
+  }
   &.right-image .gallery-text {
     float: left;
   }
   &.right-image .gallery-image {
-    float: right;
+    right: 0;
+  }
+  &.left-image .gallery-image,
+  &.right-image .gallery-image {
+    width: 35%;
+  }
+  &.left-image .gallery-text,
+  &.right-image .gallery-text {
+    text-align: justify;
+    width: 40%;
   }
   &.left-image .gallery-image,
   &.right-image .gallery-text {
     margin-right: 2.5%;
     margin-left: 7.5%;
-    text-align: justify;
-    width: 40%;
   }
   &.left-image .gallery-text,
   &.right-image .gallery-image {
     margin-right: 7.5%;
     margin-left: 2.5%;
-    text-align: justify;
-    width: 40%;
   }
   p {
     font-size: 1.15rem;
@@ -41,8 +50,17 @@
   }
 }
 
-.gallery-url > a {
-  font-size: 1.5rem;
+.last.slide > .gallery-panel {
+  padding-bottom: 1.5rem;
+}
+
+.gallery-panel-inner {
+  position: relative;
+  display: inline-block;
+}
+
+.gallery-url p {
+  font-size: 1.6rem;
 }
 
 .gallery-description {
@@ -51,4 +69,12 @@
   > p {
     font-size: 1.4rem;
   }
+}
+
+.left-image .gallery-image,
+.right-image .gallery-image {
+  margin-bottom: 0;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
