--- a/app/css/scss/_base-styles.scss
+++ b/app/css/scss/_base-styles.scss
@@ -35,7 +35,12 @@ html {
   background-position: center center;
   background-attachment: fixed;
   color: $Color-Dark-Grey;
-  font: normal normal normal 100%/1 $Font-DIN-Regular;
+  font-family: $Font-DIN-Regular;
+  font-size: 100%;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: normal;
+  line-height: 1;
   @include background-size(cover);
 }
 
