--- a/app/styles/components/_no-support.scss
+++ b/app/styles/components/_no-support.scss
@@ -7,17 +7,19 @@
   background-color: rgba(0, 0, 0, 0.3);
   height: 100%;
   width: 100%;
+  overflow-y: scroll;
   position: fixed;
   top: 0;
   z-index: 999;
 }
 
 .no-support-inner {
+  border: 1px solid #353D48;
   position: relative;
   max-width: 50rem;
   width: 90%;
   background-color: $Color-White;
-  margin: 4rem auto 0;
+  margin: 4rem auto;
   padding: 1.5rem 0.75rem;
 }
 
