--- a/app/styles/enhanced.scss
+++ b/app/styles/enhanced.scss
@@ -1,4 +1,4 @@
-// Vendor (Always comes first in case it needs to be overwritten)
+// Vendor (Always comes first, first to be overwritten)
 
 // Libraries
 @import 'libraries/notes.scss';
